Chapter 5, tehtävä 1 muutokset: Rest-api

--- a/books/bin/src/main/resources/templates/index.html
+++ b/books/bin/src/main/resources/templates/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<title>Bookstore</title>
+<title>Bookstore index-page</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" th:href="@{css/bootstrap.min.css}" />
 </head>
 <body>
 </body>
