--- a/books/bin/src/main/resources/templates/booklist.html
+++ b/books/bin/src/main/resources/templates/booklist.html
@@ -1,5 +1,7 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+
 <head>
 <title>Bookstore booklist page</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -7,6 +9,16 @@
 </head>
 <body>
 	<h1 style="padding: 10px;">Books</h1>
+	
+	<div class="col-md-4">
+		<h3 th:inline="text">Welcome [[${#httpServletRequest.remoteUser}]]</h3>
+	</div>
+	<div class="col-md-4" style="padding:20px 0">
+		<form th:action="@{/logout}" method="post">
+			<input type="submit" value="Sign Out" class="btn btn-sm btn-danger"/>
+		</form>
+	</div>
+	
 	<table class="table table-striped">
 		<tr>
 			<th>Title</th>
@@ -25,7 +37,7 @@
 			<td th:text="${book.isbn}"></td>
 			<td th:text="${book.price}"></td>
 			<td th:text="${book.category.name}"></td>
-			<td><a class="btn btn-danger" th:href="@{/delete/{id}(id=${book.id})}">Delete</a></td>
+			<td sec:authorize="hasAuthority('ADMIN')"><a class="btn btn-danger" th:href="@{/delete/{id}(id=${book.id})}">Delete</a></td>
 			<td><a class="btn btn-warning" th:href="@{/edit/{id}(id=${book.id})}">Edit</a></td>
 		</tr>
 	</table>
